[package]
name = "balatro_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "balatro_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
num-bigint = "0.4"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"

[profile.release]
lto = true
opt-level = 3
