[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "balatro-environment"
version = "0.1.0"
description = "A Python/Rust simulation engine for Balatro"
readme = "README.md"
authors = [
    { name = "egeres", email = "egeres.default@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
python-source = "python"
module-name = "balatro._engine"
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = ["maturin>=1.7,<2.0", "pytest>=8.0"]
